css/index.css
/* ... */
html {
  font-size: 62.5%;
  scroll-behavior: smooth;
}
a,
a:visited {
  text-decoration: none;
}
body {
  font-family: "IBM Plex Mono", monospace;
}
h1,
h2,
h3,
h4,
h5,
h6,
button {
  font-family: "Ubuntu", sans-serif;
}
h1 {
  font-size: 6rem;
}
h2 {
  font-size: 3rem;
}
h3 {
  font-size: 1.8rem;
}
h4 {
  font-size: 1.4rem;
}
h5 {
  font-size: 1.2rem;
}
h6 {
  font-size: 1rem;
}
.btn {
  display: inline-block;
  font-size: 2rem;
  background-color: #f3470d;
  padding: 1rem 2rem;
  border-radius: 5px;
  color: #252729;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
  font-family: "Ubuntu", sans-serif;
  transition: 0.1s ease-out all;
}
.btn span {
  display: inline-block;
  transition: 0.2s ease-in-out all;
}
.btn:hover {
  color: #fff;
  background-color: #00aecc;
  transform: translateY(-2px);
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
}
.btn:hover span {
  transform: scale(1.2) rotate(90deg);
  margin-left: 1rem;
}
.btn:active {
  color: #000;
  transform: translateY(1px);
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
.p5 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  z-index: -1;
  overflow: hidden;
  animation: fadeIn 1s ease-in-out forwards;
}
.p5 #p5-container {
  position: relative;
  width: 100%;
  height: 100%;
}
.p5 #p5-container canvas {
  position: fixed;
  width: 100%;
  height: auto;
}
.p5 .gradient {
  position: fixed;
  height: 100vh;
  width: 100%;
  top: 0;
  background-image: linear-gradient(to bottom right, rgba(193, 193, 193, 0.8), rgba(0, 0, 0, 0.6));
}
.mobile-nav {
  position: fixed;
  height: 100vh;
  width: 100%;
  top: 0;
  left: 100vw;
  z-index: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #dc400b;
}
.mobile-nav nav a {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: 4rem;
  color: #e3e3e3;
  text-decoration: none;
  padding: 2rem 25vw;
  background-color: #252729;
}
.mobile-nav nav a:not(:last-of-type) {
  margin-bottom: 4rem;
}
.mobile-nav nav a:hover {
  background-color: #949494;
  color: #f3470d;
}
.mobile-nav--slide {
  animation: slideMobileNav 0.2s ease-in-out forwards;
}
.mobile-nav--slide-out {
  animation: slideMobileNavOut 0.2s ease-out forwards;
}
@media (max-width: 400px) {
  .mobile-nav nav a {
    font-size: 3rem;
    padding: 1rem 25vw;
  }
  .mobile-nav nav a:not(:last-of-type) {
    margin-bottom: 3rem;
  }
}
.background {
  height: 100vh;
  width: 100%;
  background-color: #0d0d0d;
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
}
.about-container {
  background: #0d0d0d;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  animation: fadeIn 0.5s ease-in-out forwards;
}
.about-container .about {
  display: grid;
  max-width: 67%;
  padding: 2rem 2rem;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(6, auto);
  grid-gap: 2rem;
  transition: 0.2s ease-out max-width;
}
.about-container .about .paragraph:not(:last-of-type) {
  margin-bottom: 1rem;
}
.about-container .about .solo-img {
  margin-top: 10%;
  width: 50%;
  max-width: 15rem;
}
.about-container .about #shaker {
  transform: scaleX(-1);
  transition: 0.2s ease-in-out all;
}
.about-container .about #shaker:hover {
  filter: invert(100%);
  animation: shake 1s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
}
.about-container .about .blue {
  background-image: linear-gradient(to bottom right, #00d9ff, #0098b3);
  transition: 0.2s ease-out transform;
}
.about-container .about .blue:hover {
  background-image: linear-gradient(to bottom right, #00aecc, #006c80);
  transform: translateY(-4px);
}
.about-container .about .blue:hover img {
  transition: 0.2s ease-out all;
  transform: scale(1.1);
}
.about-container .about .blue:last-of-type img {
  margin-bottom: 2rem;
}
.about-container .about .orange {
  background-image: linear-gradient(to bottom right, #f3470d, #ab3108);
}
.about-container .about .grey {
  background-image: linear-gradient(to bottom right, #5a5a5a, #252729);
}
.about-container .about .grey h1,
.about-container .about .grey h2 {
  color: #fff;
}
.about-container .about .grey img {
  filter: invert(100%);
}
.about-container .about .max-height-sm {
  max-height: 10rem;
}
.about-container .about .center-text {
  text-align: center;
}
.about-container .about .grow-icon img {
  animation: grow 0.35s ease-in-out;
}
.about-container .about .box {
  width: 100%;
  padding: 2rem;
}
.about-container .about .box img {
  width: 50%;
  min-width: 9rem;
  max-width: 12rem;
}
.about-container .about .box p {
  font-size: 1.6rem;
  font-weight: bold;
}
.about-container .about .box h2 {
  font-size: 6rem;
}
.about-container .about .box h3 {
  margin-bottom: 2.5rem;
}
.about-container .about .box a {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  color: #000;
  transition: 0.2s ease-in-out all;
}
.about-container .about .box a:hover {
  color: #fff;
  transform: translateY(-3px);
}
.about-container .about .box a:hover img {
  filter: invert(100%);
}
.about-container .about .span1 {
  grid-column: span 1;
}
.about-container .about .span2 {
  grid-column: span 2;
}
.about-container .about .span3 {
  grid-column: span 3;
}
.about-container .about .center {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}
.about-container .about .center-col {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
@media (max-width: 1306px) {
  .about-container .about {
    max-width: 80%;
  }
}
@media (max-width: 1100px) {
  .about-container .about {
    max-width: 90%;
  }
}
@media (max-width: 800px) {
  .about-container .about .span1 {
    grid-column: span 3;
  }
  .about-container .about .span2 {
    grid-column: span 3;
  }
}
@media (max-width: 575px) {
  .about-container .about {
    max-width: 100%;
  }
}
/* ... */

